김준영 : 마스크쉐이더 업데이트(포워드 마스크 기능)

--- a/DIrectX/GameEngineCoreShader/GameEngineCoreShader.vcxproj
+++ b/DIrectX/GameEngineCoreShader/GameEngineCoreShader.vcxproj
@@ -130,6 +130,7 @@
     <FxCompile Include="ColorShader.fx" />
     <FxCompile Include="DebugColorShader.fx" />
     <FxCompile Include="RenderBase.fx" />
+    <FxCompile Include="TextureMaskShader.fx" />
     <FxCompile Include="TextureShader.fx" />
     <FxCompile Include="Transform.fx" />
   </ItemGroup>
