김준영 : IMGUI 이용해서 레벨전환 버튼 작성

--- a/DIrectX/App/imgui.ini
+++ b/DIrectX/App/imgui.ini
@@ -8,5 +8,11 @@ Pos=468,147
 Size=396,245
 Collapsed=0
 
+[Window][CONTENTSCONTROLWINDOW]
+ViewportPos=1308,95
+ViewportId=0xAAE9C52B
+Size=176,466
+Collapsed=0
+
 [Docking][Data]
 
