--- a/DIrectX/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/DIrectX/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -152,8 +152,11 @@
     <ClCompile Include="ContentsControlWindow.cpp">
       <Filter>Global</Filter>
     </ClCompile>
-    <ClCompile Include="CharacterCard.cpp">
-      <Filter>UI\UnitCard</Filter>
+    <ClCompile Include="SlotButton.cpp">
+      <Filter>UI</Filter>
+    </ClCompile>
+    <ClCompile Include="GreenArrow.cpp">
+      <Filter>UI</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -311,8 +314,11 @@
     <ClInclude Include="BanPickCard.h">
       <Filter>UI\UnitCard</Filter>
     </ClInclude>
-    <ClInclude Include="CharacterCard.h">
-      <Filter>UI\UnitCard</Filter>
+    <ClInclude Include="SlotButton.h">
+      <Filter>UI</Filter>
+    </ClInclude>
+    <ClInclude Include="GreenArrow.h">
+      <Filter>UI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
