--- a/DIrectX/GameEngineContents/GameEngineContents.vcxproj.filters
+++ b/DIrectX/GameEngineContents/GameEngineContents.vcxproj.filters
@@ -174,6 +174,12 @@
     <ClCompile Include="MenuButton.cpp">
       <Filter>UI</Filter>
     </ClCompile>
+    <ClCompile Include="TeamBundle.cpp">
+      <Filter>UI</Filter>
+    </ClCompile>
+    <ClCompile Include="BundleButton.cpp">
+      <Filter>UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ContentsCore.h" />
@@ -350,6 +356,12 @@
       <Filter>UI</Filter>
     </ClInclude>
     <ClInclude Include="MenuButton.h">
+      <Filter>UI</Filter>
+    </ClInclude>
+    <ClInclude Include="TeamBundle.h">
+      <Filter>UI</Filter>
+    </ClInclude>
+    <ClInclude Include="BundleButton.h">
       <Filter>UI</Filter>
     </ClInclude>
   </ItemGroup>
